apps/mailpit/deployment-mailpit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mailpit
  name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      containers:
        - image: axllent/mailpit:v1.31
          name: mailpit
          resources: {}
          ports:
            - containerPort: 1025
              name: smtp
            - containerPort: 8025
              name: http
          volumeMounts:
            - mountPath: /data
              name: mailpit
            - mountPath: /data/auth
              name: auth
            - mountPath: /data/tls
              name: tls
      restartPolicy: Always
      volumes:
        - name: auth
          secret:
            secretName: mailpit-auth
        - name: tls
          secret:
            secretName: almothana-xyz-tls
        - name: mailpit
          persistentVolumeClaim:
            claimName: mailpit
